# dlrhcs

./: .gitignore  AGENTS.md  EMPIRICAL_FINDINGS.md  IMPLEMENTATION_SPEC.md  LICENSE  README.md  THEOREM_MAP.md  VALIDATION.md  pyproject.toml  requirements.txt  run_all.py
configs/: fast.json  full.json  pilot.json
data/: README_download.md
data/coords/: cbsa_centroids.csv
data/metro/: README.md  build_metro_panel.py
data/unemp/: README.md
data/zillow/: README.md  cbsa_county_crosswalk_2023.csv  zillow-covariate.py
dlrhcs/: __init__.py  covariates.py  design.py  dgp.py  diagnostics.py  empirical.py  experiments.py  factorridge.py  folds.py  mc.py  onestep.py  pipeline.py  ranks.py  report.py  spatial.py  targets.py  unemp.py
scripts/: build_metro_coords.py  build_metro_panel.py  emp_report.py  fold_comparison.py  make_maps.py  sim_report.py  spatial_kernel_se.py  stress_tests.py  unemp_abc.py  xs_stress.py  zillow_abc.py
tests/: test_core.py
